--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,36 @@
     -o-animation: fadein 2s; /* Opera < 12.1 */
     animation: fadein 2s;
 }
+
+.foot{
+    background: #1A4C6E;
+    color: whitesmoke;
+    margin: 0;
+    padding: 30px 0 50px 0;
+    padding-bottom: 10px;
+}
+
+.foot h6{
+    text-align: center;
+    font-size: 12px;
+}
+
+.contact{
+    max-width: 400px;
+    padding: 10px;
+    margin-left: 10px;
+}
+
+.contact h4{
+    text-align: left;
+}
+
+.contact li{
+    list-style: none;
+    text-align: left;
+    padding-left: 0;
+}
+
+.contact li ul{
+    text-indent: 0;
+}
