--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,10 @@ a {
   color: #f5e7e3;
 }
 
-html,
 body {
   line-height: 1.4;
   font-size: 16px;
-  overflow-x: hidden;
-  overflow-y: auto;
+  position: relative;
 }
 
 /* Basics */
@@ -29,15 +27,21 @@ body {
   margin: auto;
 }
 
-/* Index */
+/* for javascript */
 
-/* Navbar */
-#navbar {
+.sticky {
   position: fixed;
   top: 0;
   width: 100%;
+}
+
+/* Navbar */
+#navbar {
+  width: 100%;
   z-index: 999;
-  min-height: 70px;
+  height: 9vh;
+  background: #28364a;
+  overflow: hidden;
 }
 
 #navbar .navbar-items {
@@ -74,7 +78,8 @@ body {
 #header {
   background: url("../asset/construction.jpg") no-repeat center center/cover
     fixed;
-  height: 100vh;
+  height: 91vh;
+  width: 100%;
   position: relative;
 }
 
@@ -91,7 +96,7 @@ body {
 }
 
 #header .image-wrapper {
-  width: 800px;
+  max-width: 800px;
   margin: auto;
   transform: translateY(0);
   opacity: 0;
@@ -100,15 +105,21 @@ body {
 
 @keyframes logo-show {
   55% {
-    transform: translateY(110px);
+    transform: translateY(70px);
   }
 
   100% {
-    transform: translateY(100px);
+    transform: translateY(60px);
     opacity: 1;
   }
 }
 
 #header .image-wrapper img {
   width: 100%;
+}
+
+.tentang-kami {
+  background: #f5e7e3;
+  width: 100%;
+  height: 100vh;
 }
