add animation on scroll for navbar

--- a/css/style.css
+++ b/css/style.css
@@ -27,53 +27,6 @@ body {
   margin: auto;
 }
 
-/* for javascript */
-
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-/* Navbar */
-#navbar {
-  width: 100%;
-  z-index: 999;
-  height: 9vh;
-  background: #28364a;
-  overflow: hidden;
-}
-
-#navbar .navbar-items {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2rem 1rem;
-  font-size: 1.3em;
-  font-weight: bold;
-}
-
-#navbar .navbar-items li {
-  transition: all 0.5s ease;
-}
-
-#navbar .navbar-items .navbar-links {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-#navbar .navbar-items .navbar-links > * {
-  margin-left: 1rem;
-  transition: all 0.5s ease;
-}
-
-#navbar .navbar-items .navbar-links > *:hover,
-#navbar .navbar-items li:hover {
-  transform: scale(1.1);
-  transition: all 0.5s ease;
-}
-
 /* Header */
 #header {
   background: url("../asset/construction.jpg") no-repeat center center/cover
@@ -116,6 +69,60 @@ body {
 
 #header .image-wrapper img {
   width: 100%;
+}
+
+/* Navbar */
+#navbar {
+  width: 100%;
+  z-index: 999;
+  /* height: 9vh; */
+  background: #28364a;
+  overflow: hidden;
+}
+
+#navbar .navbar-items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 1rem;
+  font-size: 1.3em;
+  font-weight: bold;
+  transition: padding 0.5s ease;
+}
+
+/* for javascript */
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.after-sticky {
+  /* animation: after-stick 1s ease forwards; */
+  transition: padding 2s ease !important;
+  padding: 1rem 1rem !important;
+}
+
+#navbar .navbar-items li {
+  transition: all 0.5s ease;
+}
+
+#navbar .navbar-items .navbar-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#navbar .navbar-items .navbar-links > * {
+  margin-left: 1rem;
+  transition: all 0.5s ease;
+}
+
+#navbar .navbar-items .navbar-links > *:hover,
+#navbar .navbar-items li:hover {
+  transform: scale(1.1);
+  transition: all 0.5s ease;
 }
 
 .tentang-kami {
