--- a/css/style.css
+++ b/css/style.css
@@ -1,100 +1,145 @@
-#navbar{
-    background: #28364A !important;
-    font-family: "Tokyo";
+/* Prefixes */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Karla", sans-serif;
 }
 
-#navbar a{
-    color: whitesmoke;
+li {
+  list-style: none;
 }
 
-#navbar .dropdown-menu a{
-    color: black;
+a {
+  text-decoration: none;
+  color: #28364a;
 }
 
-#navbar a:hover{
-    color: #F3A493;
+body {
+  line-height: 1.4;
+  font-size: 16px;
 }
 
-#navbar .navbar-nav a:hover{
-    background: #1A4C6E;
-    color: white; 
+/* Basics */
+.container {
+  max-width: 1100px;
+  margin: auto;
 }
 
-.background-logo{
-    margin: 0;
-    background: #D65353;
+/* Navbar */
+#navbar {
+  width: 100%;
+  z-index: 999;
+  position: absolute;
+  top: 0;
+  /* height: 9vh; */
+  background: transparent;
+  /* overflow: hidden; */
 }
 
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+#navbar .navbar-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 1rem;
+  font-size: 1.3em;
+  font-weight: bold;
+  transition: padding 0.5s ease;
 }
 
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+/* for javascript */
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+.after-sticky {
+  /* animation: after-stick 1s ease forwards; */
+  transition: padding 2s ease !important;
+  padding: 1rem 1rem !important;
 }
 
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+#navbar .navbar-items li {
+  transition: all 0.5s ease;
 }
 
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+#navbar .navbar-items li #logo-word {
+  font-family: "Tokyo";
+  letter-spacing: 2px;
+  font-weight: 400;
 }
 
-.logo-container{
-    margin: auto;
-    background: #D65353;
-    max-width: 500px;
-    padding: 50px 0;
-    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-    -moz-animation: fadein 2s; /* Firefox < 16 */
-    -ms-animation: fadein 2s; /* Internet Explorer */
-    -o-animation: fadein 2s; /* Opera < 12.1 */
-    animation: fadein 2s;
+#navbar .navbar-items .navbar-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-.foot{
-    background: #1A4C6E;
-    color: whitesmoke;
-    margin: 0;
-    padding: 30px 0 50px 0;
-    padding-bottom: 10px;
+#navbar .navbar-items .navbar-links li {
+  margin: 0 0.5rem;
+  transition: all 0.5s ease;
 }
 
-.foot h6{
-    text-align: center;
-    font-size: 12px;
+/* #navbar .navbar-items .navbar-links li:first-child {
+  margin-left: 0;
+  transition: all 0.5s ease;
+} */
+
+#navbar .navbar-items .navbar-links > *:hover,
+#navbar .navbar-items li:hover {
+  transform: scale(1.1);
+  transition: all 0.5s ease;
+}
+/* Header */
+#header {
+  background: url("../asset/construction.jpg") no-repeat center center/cover
+    fixed;
+  height: 100vh;
+  width: 100%;
+  position: relative;
 }
 
-.contact{
-    max-width: 400px;
-    padding: 10px;
-    margin-left: 10px;
+#header::before {
+  content: "";
+  /* background: linear-gradient(0, #d65353, #28364a); */
+  background: #f5e7e3;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  opacity: 0.8;
 }
 
-.contact h4{
-    text-align: left;
+#header .image-wrapper {
+  max-width: 800px;
+  margin: auto;
+  transform: translateY(0);
+  opacity: 0;
+  animation: logo-show 4s ease forwards;
 }
 
-.contact li{
-    list-style: none;
-    text-align: left;
-    padding-left: 0;
+@keyframes logo-show {
+  55% {
+    transform: translateY(70px);
+  }
+
+  100% {
+    transform: translateY(60px);
+    opacity: 1;
+  }
 }
 
-.contact li ul{
-    text-indent: 0;
+#header .image-wrapper img {
+  width: 100%;
+}
+
+.tentang-kami {
+  background: #f5e7e3;
+  width: 100%;
+  height: 100vh;
+  text-shadow: #28364a;
 }
