fix download, fix footer, fix animation

--- a/css/style.css
+++ b/css/style.css
@@ -42,17 +42,18 @@ p {
 }
 
 /* Button */
-.btn-light, .btn-dark {
+.btn-light,
+.btn-dark {
   display: inline-block;
   padding: 0.8rem 2rem;
   transition: all 0.5s;
-  cursor: pointer; 
+  cursor: pointer;
   border-radius: 5px;
   margin-bottom: 2rem;
 }
 
 .btn-light {
-  background-color: #fff; 
+  background-color: #fff;
   color: #28364a;
 }
 
@@ -62,7 +63,7 @@ p {
 }
 
 .btn-dark {
-  background-color: #28364a; 
+  background-color: #28364a;
   color: #fff;
 }
 
@@ -73,30 +74,30 @@ p {
 
 /* Bottom Lines */
 .bottom-line {
-    height: 2px;
-    width: 5.5rem;
-    background: #d65353;
-    margin-bottom: 1rem;
-    /* display: block; */
-    /* margin: 0 auto 1rem auto; */
+  height: 2px;
+  width: 5.5rem;
+  background: #d65353;
+  margin-bottom: 1rem;
+  /* display: block; */
+  /* margin: 0 auto 1rem auto; */
 }
 
 .bottom-line-registration {
-    height: 2px;
-    width: 11.5rem;
-    background: #d65353;
-    margin-bottom: 1rem;
-    /* display: block; */
-    /* margin: 0 auto 1rem auto; */
+  height: 2px;
+  width: 11.5rem;
+  background: #d65353;
+  margin-bottom: 1rem;
+  /* display: block; */
+  /* margin: 0 auto 1rem auto; */
 }
 
 .bottom-line-downloads {
-    height: 2px;
-    width: 10rem;
-    background: #d65353;
-    margin-bottom: 1rem;
-    /* display: block; */
-    /* margin: 0 auto 1rem auto; */
+  height: 2px;
+  width: 10rem;
+  background: #d65353;
+  margin-bottom: 1rem;
+  /* display: block; */
+  /* margin: 0 auto 1rem auto; */
 }
 
 /* Burger Nav */
@@ -126,6 +127,7 @@ p {
   width: 40px;
   height: 40px;
   z-index: 9;
+  background: #28364a;
 }
 
 .burger-lines .line {
@@ -281,16 +283,21 @@ p {
   left: 0;
   right: 0;
   margin: auto;
-  /* border: 2px solid rgb(44,44,44); */
+  animation: logo-show 4s ease forwards;
+  opacity: 0;
 }
 
 @keyframes logo-show {
+  0% {
+    transform: translateY(-5%);
+  }
+
   55% {
-    transform: translateY(-49%);
+    transform: translateY(2%);
   }
 
   100% {
-    transform: translateY(-50%);
+    transform: translateY(0);
     opacity: 1;
   }
 }
@@ -388,11 +395,12 @@ p {
   background: #fff;
 }
 
-#downloads .downloads-content{
+#downloads .downloads-content {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 5rem;
   text-align: center;
+  margin: auto;
 }
 
 /* Footer */
@@ -407,9 +415,9 @@ p {
 #main-footer .footer-content {
   display: flex;
   justify-content: space-between;
-  height: 5rem;
+  min-height: 5rem;
   align-items: center;
-  max-width: 1100px; 
+  /* max-width: 1100px; Ini apa */
 }
 
 #main-footer .footer-content p {
@@ -426,7 +434,7 @@ p {
 /* Footer */
 #main-footer .footer-content .social i:hover {
   cursor: pointer;
-  margin: 0 0.5rem;
+  /* margin: 0 0.5rem; */
   color: #fff;
   opacity: 1;
 }
@@ -463,12 +471,12 @@ p {
     max-width: 300px;
   }
 
-  .btn-dark{
+  .btn-dark {
     display: block;
     margin: 10px auto;
   }
 
-  #main-footer{
+  #main-footer {
     padding-bottom: 10px;
   }
 
@@ -484,14 +492,14 @@ p {
   }
 
   #main-footer .footer-content .social {
-    width: 300px;
-    margin: auto;
+    /* width: 300px; */
+    /* margin: auto; */
     text-align: center;
     padding: 10px;
   }
 
   #main-footer .footer-content .social i {
-    margin-left: 10px;
+    /* margin-left: 10px; */
   }
 }
 
