--- a/css/style.css
+++ b/css/style.css
@@ -127,30 +127,123 @@ p {
   width: 40px;
   height: 40px;
   z-index: 9;
-  background: #28364a;
+  background: rgb(40, 54, 74);
+  /* border-radius: 5px; */
 }
 
-.burger-lines .line {
+.burger-lines .line-container {
   width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+}
+
+.burger-lines .line-container .line {
+  width: 75%;
   height: 3px;
-  margin-bottom: 0.5rem;
+  /* margin: 0.25rem 0; */
   /* background: linear-gradient(45deg, #d65353, #d65353, #d65353, #f7c45f); */
   background: linear-gradient(45deg, #d65353, #e87a54);
   /* background: #f5e7e3; */
+  position: relative;
 }
+
+.before-modal {
+  transition: all 0.1s ease-in-out 0.1s, transform 0.1s ease-in-out 0.2s;
+}
+
+.after-modal {
+  transition: all 0.1s ease-in-out 0.2s, transform 0.1s ease-in-out 0.1s;
+}
+
+.burger-lines .line-container .line::before {
+  content: "";
+  width: 100%;
+  height: inherit;
+  background: inherit;
+  top: 10px;
+  position: absolute;
+  transition: inherit;
+}
+
+.burger-lines .line-container .line::after {
+  content: "";
+  width: 100%;
+  height: inherit;
+  background: inherit;
+  bottom: 10px;
+  position: absolute;
+  transition: inherit;
+}
+#burger:checked ~ .burger-lines .line-container .line {
+  transform: rotate(45deg);
+}
+#burger:checked ~ .burger-lines .line-container .line::before {
+  top: 0;
+  /* transition: inherit; */
+  /* opacity: 0; */
+}
+#burger:checked ~ .burger-lines .line-container .line::after {
+  bottom: 0;
+  transform: rotate(-90deg);
+  /* transition: inherit; */
+  /* opacity: 0; */
+}
+/* 
+.burger-lines .line-container .line:nth-child(1) {
+  animation: change-color-back 0.75s ease 0.1s forwards;
+}
+.burger-lines .line-container .line:nth-child(2) {
+  animation: change-color-back 0.75s ease 0.05s forwards;
+}
+.burger-lines .line-container .line:nth-child(3) {
+  animation: change-color-back 0.75s ease forwards;
+}
+
+@keyframes change-color-back {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    background: linear-gradient(45deg, #d65353, #e87a54);
+  }
+}
+
+#burger:checked ~ .burger-lines .line-container .line:nth-child(1) {
+  animation: change-color 1s ease forwards;
+}
+#burger:checked ~ .burger-lines .line-container .line:nth-child(2) {
+  animation: change-color 1s ease 0.05s forwards;
+}
+#burger:checked ~ .burger-lines .line-container .line:nth-child(3) {
+  animation: change-color 1s ease 0.1s forwards;
+}
+
+@keyframes change-color {
+  to {
+    background: #f5e7e3;
+  }
+} */
 
 .modal {
   display: none;
-}
-
-#burger:checked ~ .modal {
+  transition: all 0.2s ease-in-out;
   position: fixed;
   top: 0;
   width: 100vw;
   height: 100vh;
+  z-index: 5;
   background: #28364a;
   opacity: 0.9;
-  z-index: 5;
+  transform: translateY(100%);
+}
+
+#burger:checked ~ .modal {
+  transform: translateY(0);
 }
 
 .modal #mobile-nav {
@@ -241,7 +334,8 @@ p {
 } */
 
 #navbar .navbar-items .navbar-links > *:hover,
-#navbar .navbar-items li:hover {
+#navbar .navbar-items li:hover,
+.modal .mobile.nav ul li {
   transform: scale(1.1);
   transition: all 0.5s ease;
 }
