add smooth scroll and redesign buttons for register and download

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ a {
   color: #28364a;
 }
 
+/* html {
+  scroll-behavior: smooth;
+} */
+
 body {
   line-height: 1.4;
   font-size: 16px;
@@ -55,6 +59,7 @@ p {
 .btn-light {
   background-color: #fff;
   color: #28364a;
+  font-weight: bold;
 }
 
 .btn-light:hover {
@@ -408,11 +413,13 @@ p {
   transform: translateY(-100%);
   transition: transform 0.5s ease, opacity 0.5s ease;
   background: transparent;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px,
+    rgba(0, 0, 0, 0.19) 0px 6px 20px 0px;
 }
 
 .show {
   transition: transform 1s ease, opacity 1s ease !important;
-  background: #f5e7e3 !important;
+  background: #fff !important;
   transform: translateY(0) !important;
   opacity: 1 !important;
 }
@@ -483,6 +490,12 @@ p {
   color: #f5e7e3;
 }
 
+#registration .daftar {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+}
+
 /* Downloads */
 #downloads {
   padding: 2rem;
@@ -495,6 +508,13 @@ p {
   grid-gap: 5rem;
   text-align: center;
   margin: auto;
+}
+
+#downloads .downloads-content a {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
 }
 
 /* Footer */
@@ -562,7 +582,7 @@ p {
 
   #downloads .downloads-content {
     display: block;
-    max-width: 300px;
+    max-width: 100%;
   }
 
   .btn-dark {
